file(GLOB LIB_SOURCES *.cpp)
file(GLOB LIB_HEADERS *.h)
file(GLOB LIB_HEADER_ONLY_SOURCES *.hpp)

enable_testing()

if(SHARED)
  add_library(${PROJECT_NAME} SHARED ${LIB_SOURCES} ${LIB_HEADER_ONLY_SOURCES})
else()
  add_library(${PROJECT_NAME} STATIC ${LIB_SOURCES} ${LIB_HEADER_ONLY_SOURCES})
endif()

target_include_directories(${PROJECT_NAME} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
install(TARGETS ${PROJECT_NAME} DESTINATION lib)
install(FILES ${LIB_HEADERS} DESTINATION include/webpp)
set_target_properties(${PROJECT_NAME} PROPERTIES
  VERSION 1.0.0
  SOVERSION 1
)
