file(GLOB LIB_SOURCES *.cpp)
file(GLOB LIB_HTTP_HEADERS http/*.hpp)
file(GLOB LIB_HEADERS *.h)
file(GLOB LIB_HEADER_ONLY_SOURCES *.hpp)

enable_testing()

if(SHARED)
  add_library(${PROJECT_NAME} SHARED ${LIB_SOURCES} ${LIB_HEADER_ONLY_SOURCES} ${LIB_HTTP_HEADERS})
else()
  add_library(${PROJECT_NAME} STATIC ${LIB_SOURCES} ${LIB_HEADER_ONLY_SOURCES} ${LIB_HTTP_HEADERS})
endif()

target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/src)
install(TARGETS ${PROJECT_NAME} DESTINATION lib)
install(FILES ${LIB_HEADERS} DESTINATION include/webpp)
set_target_properties(${PROJECT_NAME} PROPERTIES
  VERSION 1.0.0
  SOVERSION 1
)
